@@ -122,13 +122,19 @@ libxbee connection functions
 <B><A HREF="../man3/xbee_conEnd.3.html">xbee_conEnd</A></B>(3)          - close a connection
 
 <P>
-<B><A HREF="../man3/xbee_conTx.3.html">xbee_conTx</A></B>(3)           - transmit a message (using printf-style arguments)
+<B><A HREF="../man3/xbee_conTx.3.html">xbee_conTx</A></B>(3)           - transmit a message (using printf-style arguments) - see also:
+
+<B><A HREF="../man3/xbee_conxTx.3.html">xbee_conxTx</A></B>(3)
 
 <P>
-<B><A HREF="../man3/xbee_convTx.3.html">xbee_convTx</A></B>(3)          - transmit a message (using vprintf-style arguments)
+<B><A HREF="../man3/xbee_convTx.3.html">xbee_convTx</A></B>(3)          - transmit a message (using vprintf-style arguments) - see also:
+
+<B><A HREF="../man3/xbee_convxTx.3.html">xbee_convxTx</A></B>(3)
 
 <P>
-<B><A HREF="../man3/xbee_connTx.3.html">xbee_connTx</A></B>(3)          - transmit a message (using a buffer and length)
+<B><A HREF="../man3/xbee_connTx.3.html">xbee_connTx</A></B>(3)          - transmit a message (using a buffer and length) - see also:
+
+<B><A HREF="../man3/xbee_connxTx.3.html">xbee_connxTx</A></B>(3)
 
 <P>
 <B><A HREF="../man3/xbee_conRx.3.html">xbee_conRx</A></B>(3)           - receive a message
@@ -239,6 +245,6 @@ miscellaneous functions
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 10:00:37 GMT, April 01, 2013
+Time: 19:24:09 GMT, May 11, 2013
 </BODY>
 </HTML>
