@@ -8,7 +8,7 @@ Section: Linux Programmer's Manual (3)<BR>Updated: 04-Mar-2012<BR><A HREF="#inde
 <A NAME="lbAB">&nbsp;</A>
 <H2>NAME</H2>
 
-xbee_conTx, xbee_convTx, xbee_connTx
+xbee_conTx, xbee_convTx, xbee_connTx, xbee_conxTx, xbee_convxTx, xbee_connxTx
 <A NAME="lbAC">&nbsp;</A>
 <H2>SYNOPSIS</H2>
 
@@ -17,11 +17,16 @@ xbee_conTx, xbee_convTx, xbee_connTx
 <P>
 <B>xbee_err xbee_conTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, const char *</B><I>format</I><B>, </B><I>...</I><B>);</B>
 
-<P>
 <B>xbee_err xbee_convTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, const char *</B><I>format</I><B>, va_list </B><I>args</I><B>);</B>
 
-<P>
 <B>xbee_err xbee_connTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, const unsigned char *</B><I>buf</I><B>, int </B><I>len</I><B>);</B>
+
+<P>
+<B>xbee_err xbee_conxTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, unsigned char *</B><I>frameId</I><B>, const char *</B><I>format</I><B>, </B><I>...</I><B>);</B>
+
+<B>xbee_err xbee_convxTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, unsigned char *</B><I>frameId</I><B>, const char *</B><I>format</I><B>, va_list </B><I>args</I><B>);</B>
+
+<B>xbee_err xbee_connxTx(struct xbee_con *</B><I>con</I><B>, unsigned char *</B><I>retVal</I><B>, unsigned char *</B><I>frameId</I><B>, const unsigned char *</B><I>buf</I><B>, int </B><I>len</I><B>);</B>
 
 <A NAME="lbAD">&nbsp;</A>
 <H2>DESCRIPTION</H2>
@@ -54,6 +59,11 @@ as this will terminate the format string early
 <B>xbee_connTx</B>()
 
 accepts a buffer and a length instead, allowing you to build the message yourself.
+<P>
+The 'x' variants namely
+<B>xbee_conxTx</B>(), <B>xbee_convxTx</B>() and <B>xbee_connxTx</B>
+
+can be used if you want to know what frame ID was used for the transmission.
 <P>
 If the connection type supports ACKs, and they are not disabled for the connection, and if
 <I>retVal</I>
@@ -120,6 +130,6 @@ Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt;
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 21:32:15 GMT, June 07, 2012
+Time: 19:24:09 GMT, May 11, 2013
 </BODY>
 </HTML>
