@@ -105,11 +105,14 @@ libxbee connection functions
 .sp 0                         
 .BR xbee_conEnd "(3)          - close a connection"
 .sp                           
-.BR xbee_conTx "(3)           - transmit a message (using printf-style arguments)"
+.BR xbee_conTx "(3)           - transmit a message (using printf-style arguments) - see also:"
+.BR xbee_conxTx (3)
 .sp 0                         
-.BR xbee_convTx "(3)          - transmit a message (using vprintf-style arguments)"
+.BR xbee_convTx "(3)          - transmit a message (using vprintf-style arguments) - see also:"
+.BR xbee_convxTx (3)
 .sp 0                         
-.BR xbee_connTx "(3)          - transmit a message (using a buffer and length)"
+.BR xbee_connTx "(3)          - transmit a message (using a buffer and length) - see also:"
+.BR xbee_connxTx (3)
 .sp                           
 .BR xbee_conRx "(3)           - receive a message"
 .sp 0                         
