@@ -4,6 +4,7 @@ v3.0.10 - in progress
 	* xbee_conRx() can now be called to just get the number of packets in the buffer
 	* Added C++ compatibility with byte vectors
 	* Added noWaitForAck flag so that xbee_conTx() will return straight away - useful for AT connections
+	* Added xbee_conxTx() and friends to allow tracking of frame IDs
 
 v3.0.9 - 29 Apr 2013
 	* Fixed high baudrate corruption issues
